Morse-Name-Wayne/MorseName/bin/Release/MorseName.app/Contents/Frameworks/SGSDK.framework/Versions/3.0/Headers/SGSDK.h

#define SGSDK
float sg_Core_BrightnessOf(unsigned int c);
void sg_Core_CalculateFramerate(char *average, char *highest, char *lowest, unsigned int *textColor);
void sg_Core_ChangeScreenSize(int width, int height);
void sg_Core_ColorComponents(unsigned int c, unsigned char *r, unsigned char *g, unsigned char *b, unsigned char *a);
unsigned int sg_Core_ColorFromBitmap(void *bmp, unsigned int apiColor);
void sg_Core_ColorToString(unsigned int c, char *result);
void sg_Core_Delay(unsigned int time);
void sg_Core_ExceptionMessage(char *result);
int sg_Core_ExceptionOccured();
int sg_Core_GetFramerate();
unsigned int sg_Core_GetTicks();
unsigned char sg_Core_GreenOf(unsigned int c);
unsigned int sg_Core_HSBColor(float hue, float saturation, float brightness);
void sg_Core_HSBValuesOf(unsigned int c, float *h, float *s, float *b);
float sg_Core_HueOf(unsigned int c);
void sg_Core_OpenGraphicsWindow(char *caption, int width, int height);
void sg_Core_ProcessEvents();
unsigned int sg_Core_RGBAColor(unsigned char red, unsigned char green, unsigned char blue, unsigned char alpha);
unsigned int sg_Core_RGBAFloatColor(float r, float g, float b, float a);
unsigned int sg_Core_RGBFloatColor(float r, float g, float b);
unsigned int sg_Core_RandomColor();
unsigned int sg_Core_RandomRGBColor(unsigned char alpha);
unsigned char sg_Core_RedOf(unsigned int c);
void sg_Core_RefreshScreen();
void sg_Core_RefreshScreenRestrictFPS(unsigned int TargetFPS);
float sg_Core_Rnd();
int sg_Core_RndUpto(int ubound);
float sg_Core_SaturationOf(unsigned int c);