ScreenSaver/lib/sgsdk.pas

    
    try
      result := sgCore.BrightnessOf(c);
    Except on exc: Exception do 
      TrapException(exc, 'sg_Core_BrightnessOf');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Core_BrightnessOf');
    {$ENDIF}
  end;
  
  procedure sg_Core_CalculateFramerate(average: PChar; highest: PChar; lowest: PChar; out textColor: LongWord); cdecl; export;
    var
      average_temp: String;
      highest_temp: String;
      lowest_temp: String;
      textColor_temp: Color;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Core_CalculateFramerate');
    {$ENDIF}
  
    try 
      sgCore.CalculateFramerate(average_temp, highest_temp, lowest_temp, textColor_temp);
        StrCopy(average, PChar(average_temp));
        StrCopy(highest, PChar(highest_temp));
        StrCopy(lowest, PChar(lowest_temp));
        textColor := textColor_temp;
    Except on exc: Exception do 
      TrapException(exc, 'sg_Core_CalculateFramerate');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Core_CalculateFramerate');
    {$ENDIF}
  end;
  
  procedure sg_Core_ChangeScreenSize(width: LongInt; height: LongInt); cdecl; export;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Core_ChangeScreenSize');
    {$ENDIF}
  
    try 
      sgCore.ChangeScreenSize(width, height);
    Except on exc: Exception do 
      TrapException(exc, 'sg_Core_ChangeScreenSize');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Core_ChangeScreenSize');
    {$ENDIF}
  end;
  
  procedure sg_Core_ColorComponents(c: LongWord; out r: Byte; out g: Byte; out b: Byte; out a: Byte); cdecl; export;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Core_ColorComponents');
    {$ENDIF}
  
    try 
      sgCore.ColorComponents(c, r, g, b, a);
    Except on exc: Exception do 
      TrapException(exc, 'sg_Core_ColorComponents');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Core_ColorComponents');
    {$ENDIF}
  end;
  
  function sg_Core_ColorFromBitmap(bmp: Bitmap; apiColor: LongWord): Color; cdecl; export;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Core_ColorFromBitmap');
    {$ENDIF}
    
    try
      result := sgCore.ColorFrom(bmp, apiColor);
    Except on exc: Exception do 
      TrapException(exc, 'sg_Core_ColorFromBitmap');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Core_ColorFromBitmap');
    {$ENDIF}
  end;
  
  procedure sg_Core_ColorToString(c: LongWord; result: PChar); cdecl; export;
    var
      result_temp: String;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Core_ColorToString');
    {$ENDIF}
    
    try
      result_temp := sgCore.ColorToString(c);
        StrCopy(result, PChar(result_temp));
    Except on exc: Exception do 
      TrapException(exc, 'sg_Core_ColorToString');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Core_ColorToString');
    {$ENDIF}
  end;
  
  procedure sg_Core_Delay(time: UInt32); cdecl; export;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Core_Delay');
    {$ENDIF}
  
    try 
      sgCore.Delay(time);
    Except on exc: Exception do 
      TrapException(exc, 'sg_Core_Delay');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Core_Delay');
    {$ENDIF}
  end;
  
  procedure sg_Core_ExceptionMessage(result: PChar); cdecl; export;
    var
      result_temp: String;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Core_ExceptionMessage');
    {$ENDIF}
    
    try
      result_temp := sgCore.ExceptionMessage();
        StrCopy(result, PChar(result_temp));
    Except on exc: Exception do 
      TrapException(exc, 'sg_Core_ExceptionMessage');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Core_ExceptionMessage');
    {$ENDIF}
  end;
  
  function sg_Core_ExceptionOccured(): Boolean; cdecl; export;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Core_ExceptionOccured');
    {$ENDIF}
    
    try
      result := sgCore.ExceptionOccured();
    Except on exc: Exception do 
      TrapException(exc, 'sg_Core_ExceptionOccured');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Core_ExceptionOccured');
    {$ENDIF}
  end;
  
  function sg_Core_GetFramerate(): LongInt; cdecl; export;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Core_GetFramerate');
    {$ENDIF}
    
    try
      result := sgCore.GetFramerate();
    Except on exc: Exception do 
      TrapException(exc, 'sg_Core_GetFramerate');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Core_GetFramerate');
    {$ENDIF}
  end;
  
  function sg_Core_GetTicks(): UInt32; cdecl; export;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Core_GetTicks');
    {$ENDIF}
    
    try
      result := sgCore.GetTicks();
    Except on exc: Exception do 
      TrapException(exc, 'sg_Core_GetTicks');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Core_GetTicks');
    {$ENDIF}
  end;
  
  function sg_Core_GreenOf(c: LongWord): Byte; cdecl; export;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Core_GreenOf');
    {$ENDIF}
    
    try
      result := sgCore.GreenOf(c);
    Except on exc: Exception do 
      TrapException(exc, 'sg_Core_GreenOf');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Core_GreenOf');
    {$ENDIF}
  end;
  
  function sg_Core_HSBColor(hue: Single; saturation: Single; brightness: Single): Color; cdecl; export;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Core_HSBColor');
    {$ENDIF}
    
    try
      result := sgCore.HSBColor(hue, saturation, brightness);
    Except on exc: Exception do 
      TrapException(exc, 'sg_Core_HSBColor');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Core_HSBColor');
    {$ENDIF}
  end;
  
  procedure sg_Core_HSBValuesOf(c: LongWord; out h: Single; out s: Single; out b: Single); cdecl; export;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Core_HSBValuesOf');
    {$ENDIF}
  
    try 
      sgCore.HSBValuesOf(c, h, s, b);
    Except on exc: Exception do 
      TrapException(exc, 'sg_Core_HSBValuesOf');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Core_HSBValuesOf');
    {$ENDIF}
  end;
  
  function sg_Core_HueOf(c: LongWord): Single; cdecl; export;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Core_HueOf');
    {$ENDIF}
    
    try
      result := sgCore.HueOf(c);
    Except on exc: Exception do 
      TrapException(exc, 'sg_Core_HueOf');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Core_HueOf');
    {$ENDIF}
  end;
  
  procedure sg_Core_OpenGraphicsWindow(caption: PChar; width: LongInt; height: LongInt); cdecl; export;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Core_OpenGraphicsWindow');
    {$ENDIF}
  
    try 
      sgCore.OpenGraphicsWindow(caption, width, height);
    Except on exc: Exception do 
      TrapException(exc, 'sg_Core_OpenGraphicsWindow');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Core_OpenGraphicsWindow');
    {$ENDIF}
  end;
  
  procedure sg_Core_ProcessEvents(); cdecl; export;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Core_ProcessEvents');
    {$ENDIF}
  
    try 
      sgCore.ProcessEvents();
    Except on exc: Exception do 
      TrapException(exc, 'sg_Core_ProcessEvents');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Core_ProcessEvents');
    {$ENDIF}
  end;
  
  function sg_Core_RGBAColor(red: Byte; green: Byte; blue: Byte; alpha: Byte): Color; cdecl; export;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Core_RGBAColor');
    {$ENDIF}
    
    try
      result := sgCore.RGBAColor(red, green, blue, alpha);
    Except on exc: Exception do 
      TrapException(exc, 'sg_Core_RGBAColor');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Core_RGBAColor');
    {$ENDIF}
  end;
  
  function sg_Core_RGBAFloatColor(r: Single; g: Single; b: Single; a: Single): Color; cdecl; export;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Core_RGBAFloatColor');
    {$ENDIF}
    
    try
      result := sgCore.RGBAFloatColor(r, g, b, a);
    Except on exc: Exception do 
      TrapException(exc, 'sg_Core_RGBAFloatColor');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Core_RGBAFloatColor');
    {$ENDIF}
  end;
  
  function sg_Core_RGBFloatColor(r: Single; g: Single; b: Single): Color; cdecl; export;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Core_RGBFloatColor');
    {$ENDIF}
    
    try
      result := sgCore.RGBFloatColor(r, g, b);
    Except on exc: Exception do 
      TrapException(exc, 'sg_Core_RGBFloatColor');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Core_RGBFloatColor');
    {$ENDIF}
  end;
  
  function sg_Core_RandomColor(): Color; cdecl; export;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Core_RandomColor');
    {$ENDIF}
    
    try
      result := sgCore.RandomColor();
    Except on exc: Exception do 
      TrapException(exc, 'sg_Core_RandomColor');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Core_RandomColor');
    {$ENDIF}
  end;
  
  function sg_Core_RandomRGBColor(alpha: Byte): Color; cdecl; export;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Core_RandomRGBColor');
    {$ENDIF}
    
    try
      result := sgCore.RandomRGBColor(alpha);
    Except on exc: Exception do 
      TrapException(exc, 'sg_Core_RandomRGBColor');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Core_RandomRGBColor');
    {$ENDIF}
  end;
  
  function sg_Core_RedOf(c: LongWord): Byte; cdecl; export;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Core_RedOf');
    {$ENDIF}
    
    try
      result := sgCore.RedOf(c);
    Except on exc: Exception do 
      TrapException(exc, 'sg_Core_RedOf');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Core_RedOf');
    {$ENDIF}
  end;
  
  procedure sg_Core_RefreshScreen(); cdecl; export;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Core_RefreshScreen');
    {$ENDIF}
  
    try 
      sgCore.RefreshScreen();
    Except on exc: Exception do 
      TrapException(exc, 'sg_Core_RefreshScreen');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Core_RefreshScreen');
    {$ENDIF}
  end;
  
  procedure sg_Core_RefreshScreenRestrictFPS(TargetFPS: UInt32); cdecl; export;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Core_RefreshScreenRestrictFPS');
    {$ENDIF}
  
    try 
      sgCore.RefreshScreen(TargetFPS);
    Except on exc: Exception do 
      TrapException(exc, 'sg_Core_RefreshScreenRestrictFPS');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Core_RefreshScreenRestrictFPS');
    {$ENDIF}
  end;
  
  function sg_Core_Rnd(): Single; cdecl; export;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Core_Rnd');
    {$ENDIF}
    
    try
      result := sgCore.Rnd();
    Except on exc: Exception do 
      TrapException(exc, 'sg_Core_Rnd');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Core_Rnd');
    {$ENDIF}
  end;
  
  function sg_Core_RndUpto(ubound: LongInt): LongInt; cdecl; export;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Core_RndUpto');
    {$ENDIF}
    
    try
      result := sgCore.Rnd(ubound);
    Except on exc: Exception do 
      TrapException(exc, 'sg_Core_RndUpto');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Core_RndUpto');
    {$ENDIF}
  end;
  
  function sg_Core_SaturationOf(c: LongWord): Single; cdecl; export;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Core_SaturationOf');
    {$ENDIF}
